Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntegerIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
