Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanIntObjField.quorum
class Main
    Integer v
    v:SetValue(5)
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
